fix: kbd color in dark mode

--- a/src/components/ui/markdown/markdown.module.css
+++ b/src/components/ui/markdown/markdown.module.css
@@ -3,7 +3,7 @@
 
   :global {
     kbd {
-      @apply kbd kbd-sm bg-base-100;
+      @apply kbd kbd-sm bg-base-100 text-base-content;
     }
     & .spoiler {
       position: relative;
